k8s/notification-k8s/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: ecom3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
      version: "v1"
  template:
    metadata:
      labels:
        app: notification
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - notification
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: notification-app
          image: farid809/notification
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8083
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
