k8s/notification-k8s/notification-mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notification-mongodb
  namespace: ecom3
spec:
  serviceName: notification-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: notification-mongodb
  template:
    metadata:
      labels:
        app: notification-mongodb
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.18
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: peer
              containerPort: 27017
          command:
            - mongod
          args:
            - --config=/data/configdb/mongod.conf
            - --dbpath=$(DATA_PATH)
            - --replSet=$(REPLICA_SET)
            - --port=$(PORT)
            - --bind_ip=0.0.0.0
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
          volumeMounts:
            - name: datadir
              mountPath: /data/db
            - name: configdir
              mountPath: /data/configdb
            - name: workdir
              mountPath: /work-dir
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: config
          configMap:
            name: notification-mongodb-config
        - name: workdir
          emptyDir: {}
        - name: init
          configMap:
            defaultMode: 0755
            name: notification-mongodb-init
        - name: configdir
          emptyDir: {}
        - name: datadir
          emptyDir: {}
---
# Headless service for DNS record
apiVersion: v1
kind: Service
metadata:
  name: notification-mongodb
  namespace: ecom3
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: peer
      port: 27017
  selector:
    app: notification-mongodb
