k8s/notification-k8s/notification-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification-virtualservice
  namespace: ecom3
spec:
  hosts:
    - notification
  http:
    - route:
        - destination:
            host: notification
            subset: "v1"
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
